--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "preact-router": "^2.5.5",
     "redux": "^3.7.2",
     "redux-observable": "^0.15.0",
-    "rxjs": "^5.4.3"
+    "rxjs": "^5.4.3",
+    "typestyle": "^1.3.8"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.14.6",
