--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "csstips": "^0.2.2",
+    "howler": "^2.0.4",
     "preact": "^8.2.1",
     "preact-redux": "^2.0.2",
     "preact-router": "^2.5.5",
@@ -20,6 +21,7 @@
     "typestyle": "^1.3.8"
   },
   "devDependencies": {
+    "@types/howler": "^2.0.3",
     "@types/lodash-es": "^4.14.6",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
