--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build:dev": "webpack --env.dev",
     "build:staging": "webpack --env.staging",
     "build:prod": "webpack --env.prod",
+    "predeploy:staging": "yarn build:staging",
+    "predeploy:prod": "yarn build:prod",
+    "deploy:staging": "aws s3 sync dist s3://static.podcst.io/staging/",
+    "deploy:prod": "aws s3 sync dist s3://static.podcst.io/prod/",
     "dev": "webpack-dev-server --config webpack.config.js --env.dev --hot --inline --host 0.0.0.0"
   },
   "dependencies": {
