--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "share-text-client",
-  "version": "1.0.0",
+  "name": "podcst-web",
+  "version": "0.4.0",
   "main": "dist/index.js",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "build:dev": "webpack --env.dev",
     "build:staging": "webpack --env.staging",
