--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.5.4",
     "webpack-chunk-hash": "^0.4.0",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "workbox-webpack-plugin": "^2.0.1"
   }
 }
