--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "podcst-web",
-  "version": "0.5.0-beta",
+  "version": "0.5.0",
   "main": "dist/index.js",
   "license": "MIT",
   "private": true,
