--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
+    "tslint": "^5.7.0",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.4",
