--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "main": "dist/index.js",
   "license": "MIT",
   "private": true,
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
   "scripts": {
     "build:dev": "webpack --env.dev",
     "build:staging": "webpack --env.staging",
@@ -15,6 +20,7 @@
     "deploy:staging": "./shell/sync.sh staging",
     "deploy:prod": "./shell/sync.sh prod",
     "dev": "webpack-dev-server --config webpack.config.js --env.dev --hot --inline --host 0.0.0.0",
+    "format": "prettier --write",
     "lint": "tslint --project tsconfig.json --fix"
   },
   "dependencies": {
@@ -41,9 +47,11 @@
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "prettier": "1.7.4",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
     "tslint": "^5.7.0",
+    "tslint-config-prettier": "^1.5.0",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.4",
