--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,5 @@
   },
   "compileOnSave": false,
   "buildOnSave": false,
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
