--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
   "dependencies": {
     "csstips": "^0.3.0",
     "howler": "^2.0.13",
-    "preact": "^8.2.5",
-    "preact-redux": "^2.0.2",
-    "preact-router": "^2.5.7",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.2.1",
@@ -44,6 +45,10 @@
   },
   "devDependencies": {
     "@types/howler": "^2.0.5",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.4",
+    "@types/react-router-dom": "^4.3.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
