--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "ts-loader": "^2.3.2",
     "tslint": "^5.7.0",
     "tslint-config-prettier": "^1.5.0",
-    "typescript": "^2.9.2",
+    "typescript": "3.1.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.4",
     "webpack-bundle-analyzer": "^2.9.0",
