--- a/package.json
+++ b/package.json
@@ -56,24 +56,23 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.6.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
+    "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.6.0",
+    "file-loader": "2.0.0",
+    "html-webpack-plugin": "3.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
     "prettier": "1.7.4",
-    "style-loader": "^0.18.2",
-    "ts-loader": "^2.3.2",
+    "ts-loader": "5.3.0",
     "tslint": "^5.7.0",
     "tslint-config-prettier": "^1.5.0",
     "typescript": "3.1.6",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.4",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-plugin-hash-output": "^1.3.0",
-    "workbox-webpack-plugin": "^2.0.1"
+    "url-loader": "1.1.2",
+    "webpack": "4.24.0",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "3.1.10",
+    "webpack-plugin-hash-output": "3.1.0",
+    "workbox-webpack-plugin": "3.6.3"
   }
 }
