Upgrade babel deps

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "private": true,
+  "browserslist": "> 0.25%, not dead",
   "prettier": {
     "printWidth": 120,
     "singleQuote": true,
@@ -45,17 +46,17 @@
     "typestyle": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@types/history": "^4.7.2",
     "@types/howler": "^2.0.5",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.4",
     "@types/react-router-dom": "^4.3.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.6.0",
     "file-loader": "2.0.0",
