--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
-    "prettier": "1.7.4",
+    "prettier": "1.14.3",
     "ts-loader": "5.3.0",
-    "tslint": "^5.7.0",
-    "tslint-config-prettier": "^1.5.0",
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.15.0",
     "typescript": "3.1.6",
     "url-loader": "1.1.2",
     "webpack": "4.24.0",
