--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "csstips": "^0.3.0",
     "history": "^4.7.2",
     "howler": "^2.0.13",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
+    "react-redux": "5.1.0",
     "react-router-dom": "^4.3.1",
     "redux": "4.0.1",
     "redux-observable": "^1.0.0",
