Use exact versions

--- a/package.json
+++ b/package.json
@@ -37,30 +37,30 @@
     "lint": "tslint --project tsconfig.json --fix"
   },
   "dependencies": {
-    "csstips": "^0.3.0",
-    "history": "^4.7.2",
-    "howler": "^2.0.13",
+    "csstips": "0.3.0",
+    "history": "4.7.2",
+    "howler": "2.0.15",
     "react": "16.6.0",
     "react-dom": "16.6.0",
     "react-redux": "5.1.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-observable": "^1.0.0",
     "rxjs": "6.3.3",
-    "typestyle": "^2.0.1"
+    "typestyle": "2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "@types/history": "^4.7.2",
-    "@types/howler": "^2.0.5",
+    "@babel/preset-env": "7.1.0",
+    "@types/history": "4.7.2",
+    "@types/howler": "2.0.5",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.4",
     "@types/react-router-dom": "^4.3.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "8.0.4",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.6.0",
     "file-loader": "2.0.0",
