--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
     "@babel/preset-env": "7.1.0",
     "@types/history": "4.7.2",
     "@types/howler": "2.0.5",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.4",
-    "@types/react-router-dom": "^4.3.0",
+    "@types/react": "16.4.18",
+    "@types/react-dom": "16.0.9",
+    "@types/react-redux": "6.0.9",
+    "@types/react-router-dom": "4.3.1",
     "babel-loader": "8.0.4",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.6.0",
