--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build:dev": "webpack --env.dev",
     "build:staging": "webpack --env.staging",
     "build:prod": "webpack --env.prod",
-    "postbuild:staging": "./shell/fix-sw.sh staging",
-    "postbuild:prod": "./shell/fix-sw.sh prod",
+    "postbuild:staging": "./shell/post-process.sh staging",
+    "postbuild:prod": "./shell/post-process.sh prod",
     "predeploy:staging": "yarn build:staging",
     "predeploy:prod": "yarn build:prod",
     "deploy:staging": "./shell/sync.sh staging",
