--- a/package.json
+++ b/package.json
@@ -24,12 +24,9 @@
   },
   "scripts": {
     "build:dev": "webpack --env.dev",
-    "build:staging": "webpack --env.staging",
     "build:prod": "webpack --env.prod",
-    "predeploy:staging": "yarn build:staging",
-    "predeploy:prod": "yarn build:prod",
-    "deploy:staging": "./shell/sync.sh staging",
-    "deploy:prod": "./shell/sync.sh prod",
+    "predeploy": "yarn build:prod",
+    "deploy": "now dist",
     "dev": "webpack-dev-server --config webpack.config.js --env.dev --hot --inline --host 0.0.0.0",
     "format": "prettier --write \"src/**/{*.ts,*.tsx}\"",
     "lint": "tslint --project tsconfig.json --fix"
