Make deploys static

--- a/public/now.json
+++ b/public/now.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
   "name": "podcst-web-static",
-  "alias": "static.podcst.app"
+  "alias": "static.podcst.app",
+  "type": "static"
 }
