Remove unsupported field from now.json

--- a/public/now.json
+++ b/public/now.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
   "name": "podcst-web-static",
-  "alias": "static.podcst.app",
-  "type": "static"
+  "alias": "static.podcst.app"
 }
