--- a/server/now.json
+++ b/server/now.json
@@ -5,6 +5,7 @@
   "alias": "podcst.app",
   "builds": [
     { "src": "dist/**", "use": "@now/static" },
+    { "src": "dist/**/**", "use": "@now/static" },
     { "src": "index.js", "use": "@now/node-server" }
   ],
   "routes": [
