Generate static webpages to be deployed
- Tempoarily remove ssr

--- a/public/now.json
+++ b/public/now.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
   "name": "podcst-web-static",
-  "alias": "static.podcst.app"
+  "alias": [
+    "podcst.app",
+    "static.podcst.app"
+  ]
 }
