--- a/now.json
+++ b/now.json
@@ -5,6 +5,8 @@
     "podcst.app",
     "static.podcst.app"
   ],
-  "builds": [{ "src": "dist/**", "use": "@now/static" }],
-  "routes": [{ "src": "/(.*)", "dest": "dist/$1" }]
+  "builds": [
+    { "src": "package.json", "use": "@now/static-build" }
+  ]
 }
+
