--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "4.6.0",
     "eslint": "7.12.1",
     "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.0",
     "lint-staged": "10.5.0",
     "prettier": "2.1.2",
