--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "normalize.css": "8.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-virtual": "2.3.0",
     "swr": "0.3.7"
   },
   "devDependencies": {
