--- a/package.json
+++ b/package.json
@@ -24,29 +24,30 @@
     "start": "next start",
     "format": "prettier --write \"src/**/{*.ts,*.tsx}\"",
     "lint": "eslint src --ext .ts,tsx",
-    "deploy": "vercel"
+    "deploy": "vercel",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "axios": "0.21.0",
-    "next": "10.0.0",
+    "axios": "0.21.1",
+    "next": "11.0.1",
     "normalize.css": "8.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-virtual": "2.3.0",
-    "swr": "0.3.7"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-virtual": "2.8.1",
+    "swr": "0.5.6"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
-    "eslint": "7.12.1",
-    "eslint-config-prettier": "6.15.0",
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "@typescript-eslint/parser": "4.29.1",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "4.3.0",
-    "lint-staged": "10.5.0",
-    "prettier": "2.1.2",
-    "typescript": "4.0.5"
+    "husky": "7.0.1",
+    "lint-staged": "11.1.2",
+    "prettier": "2.3.2",
+    "typescript": "4.3.5"
   }
 }
