--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "howler": "2.2.3",
     "next": "11.0.1",
     "normalize.css": "8.0.1",
     "react": "17.0.2",
@@ -37,9 +38,11 @@
     "swr": "0.5.6"
   },
   "devDependencies": {
+    "@types/howler": "2.2.3",
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
+    "@types/wicg-mediasession": "1.1.2",
     "@typescript-eslint/eslint-plugin": "4.29.1",
     "@typescript-eslint/parser": "4.29.1",
     "eslint": "7.32.0",
