--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "howler": "2.2.3",
     "next": "11.0.1",
     "normalize.css": "8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.0.0-alpha-82583617b-20210812",
+    "react-dom": "18.0.0-alpha-82583617b-20210812",
     "react-virtual": "2.8.1",
     "swr": "0.5.6"
   },
