--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react": "18.0.0-alpha-82583617b-20210812",
     "react-dom": "18.0.0-alpha-82583617b-20210812",
     "react-virtual": "2.8.1",
-    "swr": "0.5.6"
+    "swr": "0.5.6",
+    "zustand": "3.5.8"
   },
   "devDependencies": {
     "@types/howler": "2.2.3",
