--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "0.21.1",
     "downshift": "6.1.7",
     "howler": "2.2.3",
+    "idb-keyval": "5.1.3",
     "next": "11.1.0",
     "normalize.css": "8.0.1",
     "react": "18.0.0-alpha-e4e8226c6-20210812",
