--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@shopify/react-web-worker": "2.1.7",
     "axios": "0.21.4",
     "downshift": "6.1.7",
     "howler": "2.2.3",
     "idb-keyval": "6.0.2",
+    "match-sorter": "6.3.1",
     "next": "11.1.2",
     "normalize.css": "8.0.1",
     "react": "18.0.0-alpha-bc9bb87c2-20210917",
