--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "next build",
     "start": "next start",
     "format": "prettier --write \"src/**/{*.ts,*.tsx}\"",
-    "lint": "eslint src --ext .ts,tsx",
+    "lint": "next lint",
     "deploy": "vercel",
     "prepare": "husky install"
   },
@@ -50,10 +50,9 @@
     "@types/react-dom": "^17.0.9",
     "@types/wicg-mediasession": "1.1.2",
     "@typescript-eslint/eslint-plugin": "4.29.1",
-    "@typescript-eslint/parser": "4.29.1",
     "eslint": "7.32.0",
+    "eslint-config-next": "12.0.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "7.0.1",
     "lint-staged": "11.1.2",
     "prettier": "2.3.2",
