--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@shopify/react-web-worker": "5.0.13",
     "@vercel/analytics": "1.0.1",
+    "@vercel/kv": "0.2.2",
     "downshift": "7.6.0",
     "howler": "2.2.3",
     "idb-keyval": "6.2.1",
@@ -40,6 +41,7 @@
     "react-dom": "18.2.0",
     "react-virtual": "2.10.4",
     "swr": "2.2.0",
+    "xml2js": "0.6.0",
     "zustand": "4.3.8"
   },
   "devDependencies": {
@@ -49,6 +51,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/wicg-mediasession": "1.1.4",
+    "@types/xml2js": "0.4.11",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
