chore(api): Use self hosted redis
@vercel/kv / upstash have really low quotas and expensive pricing

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   "dependencies": {
     "@shopify/react-web-worker": "5.0.13",
     "@vercel/analytics": "1.0.1",
-    "@vercel/kv": "0.2.2",
     "downshift": "7.6.0",
     "howler": "2.2.3",
     "idb-keyval": "6.2.1",
+    "ioredis": "5.3.2",
     "match-sorter": "6.3.1",
     "next": "13.4.7",
     "normalize.css": "8.0.1",
