--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "0.4.0",
     "@shopify/react-web-worker": "5.0.13",
     "@vercel/analytics": "1.0.1",
     "downshift": "7.6.0",
@@ -35,6 +36,7 @@
     "idb-keyval": "6.2.1",
     "ioredis": "5.3.2",
     "match-sorter": "6.3.1",
+    "negotiator": "0.6.3",
     "next": "13.4.7",
     "normalize.css": "8.0.1",
     "react": "18.2.0",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@types/chromecast-caf-sender": "1.0.5",
     "@types/howler": "2.2.7",
+    "@types/negotiator": "0.6.1",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
