chore(deps): Upgrade

--- a/package.json
+++ b/package.json
@@ -28,40 +28,43 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "0.4.0",
+    "@formatjs/intl-localematcher": "0.5.2",
     "@shopify/react-web-worker": "5.0.13",
-    "@vercel/analytics": "1.0.1",
-    "downshift": "7.6.0",
-    "howler": "2.2.3",
+    "@vercel/analytics": "1.1.1",
+    "downshift": "8.3.1",
+    "howler": "2.2.4",
     "idb-keyval": "6.2.1",
     "ioredis": "5.3.2",
     "match-sorter": "6.3.1",
     "negotiator": "0.6.3",
-    "next": "13.4.7",
+    "next": "14.0.4",
     "normalize.css": "8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-virtual": "2.10.4",
-    "swr": "2.2.0",
-    "xml2js": "0.6.0",
-    "zustand": "4.3.8"
+    "swr": "2.2.4",
+    "xml2js": "0.6.2",
+    "zustand": "4.4.7"
   },
   "devDependencies": {
-    "@types/chromecast-caf-sender": "1.0.5",
-    "@types/howler": "2.2.7",
-    "@types/negotiator": "0.6.1",
-    "@types/node": "^20.3.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@types/wicg-mediasession": "1.1.4",
-    "@types/xml2js": "0.4.11",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "eslint-config-prettier": "8.8.0",
+    "@types/chromecast-caf-sender": "1.0.8",
+    "@types/eslint": "~8.56.1",
+    "@types/eslint-config-prettier": "~6.11.3",
+    "@types/howler": "2.2.11",
+    "@types/lint-staged": "~13.3.0",
+    "@types/negotiator": "0.6.3",
+    "@types/node": "^20.10.6",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "@types/wicg-mediasession": "1.1.8",
+    "@types/xml2js": "0.4.14",
+    "@typescript-eslint/eslint-plugin": "6.17.0",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "9.1.0",
     "husky": "8.0.3",
-    "lint-staged": "13.2.2",
-    "prettier": "2.8.8",
-    "typescript": "5.1.5"
+    "lint-staged": "15.2.0",
+    "prettier": "3.1.1",
+    "typescript": "5.3.3"
   }
 }
