--- a/package.json
+++ b/package.json
@@ -28,43 +28,44 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "0.5.2",
-    "@shopify/react-web-worker": "5.0.13",
-    "@vercel/analytics": "1.1.1",
-    "downshift": "8.3.1",
+    "@formatjs/intl-localematcher": "0.5.3",
+    "@shopify/react-web-worker": "5.0.14",
+    "@vercel/analytics": "1.2.2",
+    "downshift": "8.3.2",
     "howler": "2.2.4",
     "idb-keyval": "6.2.1",
     "ioredis": "5.3.2",
-    "match-sorter": "6.3.1",
+    "match-sorter": "6.3.4",
     "negotiator": "0.6.3",
-    "next": "14.0.4",
+    "next": "14.1.3",
     "normalize.css": "8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-virtual": "2.10.4",
-    "swr": "2.2.4",
+    "swr": "2.2.5",
     "xml2js": "0.6.2",
-    "zustand": "4.4.7"
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/chromecast-caf-sender": "1.0.8",
-    "@types/eslint": "~8.56.1",
-    "@types/eslint-config-prettier": "~6.11.3",
+    "@types/eslint": "8.56.5",
+    "@types/eslint-config-prettier": "6.11.3",
     "@types/howler": "2.2.11",
-    "@types/lint-staged": "~13.3.0",
+    "@types/lint-staged": "13.3.0",
     "@types/negotiator": "0.6.3",
-    "@types/node": "^20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
+    "@types/node": "20.11.25",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
     "@types/wicg-mediasession": "1.1.8",
     "@types/xml2js": "0.4.14",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
+    "@typescript-eslint/eslint-plugin": "7.1.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "9.1.0",
-    "husky": "8.0.3",
-    "lint-staged": "15.2.0",
-    "prettier": "3.1.1",
-    "typescript": "5.3.3"
-  }
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
+    "prettier": "3.2.5",
+    "typescript": "5.4.2"
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
