--- a/package.json
+++ b/package.json
@@ -24,48 +24,47 @@
     "start": "next start",
     "format": "prettier --write \"src/**/{*.ts,*.tsx}\"",
     "lint": "next lint",
-    "deploy": "vercel",
-    "prepare": "husky install"
+    "deploy": "vercel"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "0.5.3",
-    "@shopify/react-web-worker": "5.0.14",
-    "@vercel/analytics": "1.2.2",
-    "downshift": "8.3.2",
+    "@formatjs/intl-localematcher": "0.5.9",
+    "@shopify/react-web-worker": "5.1.6",
+    "@vercel/analytics": "1.4.1",
+    "downshift": "9.0.8",
     "howler": "2.2.4",
     "idb-keyval": "6.2.1",
-    "ioredis": "5.3.2",
-    "match-sorter": "6.3.4",
-    "negotiator": "0.6.3",
-    "next": "14.1.3",
+    "ioredis": "5.4.2",
+    "match-sorter": "8.0.0",
+    "negotiator": "1.0.0",
+    "next": "15.1.2",
     "normalize.css": "8.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-virtual": "2.10.4",
     "swr": "2.2.5",
     "xml2js": "0.6.2",
-    "zustand": "4.5.2"
+    "zustand": "5.0.2"
   },
   "devDependencies": {
-    "@types/chromecast-caf-sender": "1.0.8",
-    "@types/eslint": "8.56.5",
+    "@types/chromecast-caf-sender": "1.0.11",
+    "@types/eslint": "9.6.1",
     "@types/eslint-config-prettier": "6.11.3",
-    "@types/howler": "2.2.11",
+    "@types/howler": "2.2.12",
     "@types/lint-staged": "13.3.0",
     "@types/negotiator": "0.6.3",
-    "@types/node": "20.11.25",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
+    "@types/node": "22.10.2",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "@types/wicg-mediasession": "1.1.8",
     "@types/xml2js": "0.4.14",
-    "@typescript-eslint/eslint-plugin": "7.1.1",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
+    "@typescript-eslint/eslint-plugin": "8.18.1",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "9.1.0",
-    "husky": "9.0.11",
-    "lint-staged": "15.2.2",
-    "prettier": "3.2.5",
-    "typescript": "5.4.2"
+    "husky": "9.1.7",
+    "lint-staged": "15.2.11",
+    "prettier": "3.4.2",
+    "typescript": "5.7.2"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
