build(fly): Add fly.io deploy

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zustand": "5.0.2"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
     "@types/chromecast-caf-sender": "1.0.11",
     "@types/eslint": "9.6.1",
     "@types/eslint-config-prettier": "6.11.3",
