--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/chromecast-caf-sender": "1.0.11",
     "@types/eslint": "9.6.1",
     "@types/eslint-config-prettier": "6.11.3",
@@ -60,12 +61,15 @@
     "@types/wicg-mediasession": "1.1.8",
     "@types/xml2js": "0.4.14",
     "@typescript-eslint/eslint-plugin": "8.18.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "9.1.0",
     "husky": "9.1.7",
     "lint-staged": "15.2.11",
+    "postcss": "^8.5.6",
     "prettier": "3.4.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.7.2"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
