--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "0.5.9",
+    "@tanstack/react-query": "^5.90.12",
     "downshift": "9.0.8",
     "howler": "2.2.4",
     "idb-keyval": "6.2.1",
@@ -39,7 +40,6 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-virtual": "2.10.4",
-    "swr": "2.2.5",
     "xml2js": "0.6.2",
     "zustand": "5.0.2"
   },
