chore(packages): Upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
     "short-url": "bun scripts/generate-short-url.ts"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "0.5.9",
+    "@formatjs/intl-localematcher": "0.7.2",
     "@tanstack/react-query": "^5.90.12",
-    "downshift": "9.0.8",
+    "@tanstack/react-virtual": "^3.13.9",
+    "downshift": "9.0.13",
     "howler": "2.2.4",
-    "idb-keyval": "6.2.1",
-    "ioredis": "5.4.2",
-    "match-sorter": "8.0.0",
+    "idb-keyval": "6.2.2",
+    "ioredis": "5.8.2",
+    "match-sorter": "8.2.0",
     "negotiator": "1.0.0",
-    "next": "15.2.6",
+    "next": "15.5.9",
     "normalize.css": "8.0.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-virtual": "2.10.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "xml2js": "0.6.2",
-    "zustand": "5.0.2"
+    "zustand": "5.0.9"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
@@ -50,24 +50,24 @@
     "@types/eslint": "9.6.1",
     "@types/eslint-config-prettier": "6.11.3",
     "@types/howler": "2.2.12",
-    "@types/lint-staged": "13.3.0",
-    "@types/negotiator": "0.6.3",
-    "@types/node": "22.10.2",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/negotiator": "0.6.4",
+    "@types/node": "22.15.32",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/wicg-mediasession": "1.1.8",
     "@types/xml2js": "0.4.14",
-    "@typescript-eslint/eslint-plugin": "8.18.1",
+    "@typescript-eslint/eslint-plugin": "8.34.1",
+    "@typescript-eslint/parser": "8.34.1",
     "autoprefixer": "^10.4.23",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.1.2",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "9.28.0",
+    "eslint-config-next": "15.5.9",
+    "eslint-config-prettier": "10.1.5",
     "husky": "9.1.7",
-    "lint-staged": "15.2.11",
+    "lint-staged": "16.1.0",
     "postcss": "^8.5.6",
-    "prettier": "3.4.2",
+    "prettier": "3.5.3",
     "tailwindcss": "^4.1.18",
-    "typescript": "5.7.2"
+    "typescript": "5.8.3"
   },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+  "packageManager": "yarn@1.22.22+sha1.ee5da4406e890e2e897069b6c9d4bf0d1ad5e3ec"
 }
