--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -3,27 +3,27 @@
   "name": "Podcst",
   "icons": [
     {
-      "src": "https://static.podcst.app/icons/launcher-72.png",
+      "src": "https://www.podcst.app/icons/launcher-72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "https://static.podcst.app/icons/launcher-96.png",
+      "src": "https://www.podcst.app/icons/launcher-96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "https://static.podcst.app/icons/launcher-144.png",
+      "src": "https://www.podcst.app/icons/launcher-144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "https://static.podcst.app/icons/launcher-192.png",
+      "src": "https://www.podcst.app/icons/launcher-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "https://static.podcst.app/icons/launcher-512.png",
+      "src": "https://www.podcst.app/icons/launcher-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
