--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "match-sorter": "8.2.0",
     "negotiator": "1.0.0",
     "next": "16.1.0",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "typescript": "5.8.3",
