--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "0.7.2",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-virtual": "^3.13.9",
     "downshift": "9.0.13",
