--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.6.0",
     "typescript": "5.8.3",
     "xml2js": "0.6.2",
     "zustand": "5.0.9"
