--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@biomejs/biome": "^2.3.10",
     "@flydotio/dockerfile": "^0.7.10",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bun": "^1.3.5",
     "@types/chromecast-caf-sender": "1.0.11",
     "@types/howler": "2.2.12",
     "@types/negotiator": "0.6.4",
