ci(fly): Align deploy with local script

--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,5 +1,3 @@
-# See https://fly.io/docs/app-guides/continuous-deployment-with-github-actions/
-
 name: Fly Deploy
 on:
   push:
@@ -9,10 +7,16 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-    concurrency: deploy-group    # optional: ensure only one action runs at a time
+    concurrency: deploy-group
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - run: |
+          flyctl console --dockerfile Dockerfile.builder \
+            -C "/srv/deploy.sh" \
+            --env=FLY_API_TOKEN=$FLY_API_TOKEN \
+            --vm-cpukind shared \
+            --vm-memory 1024 \
+            --vm-cpus 1
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
